# framework

./: .coverage  .gitignore  AGENTS.md  CHANGELOG-SOTA-REST.md  CHANGELOG.md  LICENSE  Makefile  README.md  SKILLS.md  config.yaml  main_api.py  main_mcp.py  main_mcp_sse.py  main_mcp_stdio.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: cli-e2e.yml  pr-quality.yml  publish.yml
adapters/input/: __init__.py  ingredient_fastapi.py  ingredient_fastmcp.py  ingredient_router.py
adapters/input/schemas/: __init__.py  base_schema.py  ingredient_schema.py
adapters/output/: __init__.py  console_logger.py  duckdb_ingredient_repository.py  duckdb_repository.py  in_memory_ingredient_repository.py  in_memory_repository.py  mongodb_ingredient_repository.py  mongodb_repository.py
application/use_cases/: __init__.py  create.py  delete.py  duplicate.py  find_all.py  purge.py  read.py  update.py
arclith/: __init__.py  arclith.py
arclith/adapters/: context.py
arclith/adapters/input/: auth_pipeline.py  dependencies.py
arclith/adapters/input/fastapi/: auth.py  cache_control.py  dependencies.py  etag.py  idempotency.py  timing.py
arclith/adapters/input/fastmcp/: auth.py  dependencies.py
arclith/adapters/input/jwt/: decoder.py
arclith/adapters/input/license/: validator.py
arclith/adapters/input/probes/: metrics.py  server.py
arclith/adapters/input/schemas/: __init__.py  base_schema.py  response_wrapper.py
arclith/adapters/output/chain/: secret_adapter.py
arclith/adapters/output/console/: logger.py
arclith/adapters/output/duckdb/: repository.py
arclith/adapters/output/env/: secret_adapter.py
arclith/adapters/output/memory/: cache_adapter.py  repository.py
arclith/adapters/output/mongodb/: config.py  context.py  repository.py
arclith/adapters/output/redis/: cache_adapter.py
arclith/adapters/output/vault/: secret_adapter.py  tenant_adapter.py
arclith/adapters/output/yaml/: secret_adapter.py
arclith/application/: timing.py
arclith/application/services/: __init__.py  base_service.py
arclith/application/use_cases/: create.py  delete.py  duplicate.py  find_all.py  purge.py  read.py  update.py
arclith/docs/: architecture.md  pypi-publishing.md
arclith/domain/models/: entity.py  tenant.py
arclith/domain/ports/: cache.py  license_validator.py  logger.py  repository.py  secret_resolver.py  tenant_resolver.py
arclith/infrastructure/: adapter_registry.py  config.py  lm.py  repository_factory.py  secret_factory.py  secret_loader.py
cli/: .gitignore  Makefile  README.md  pyproject.toml
cli/arclith_cli/: adapter_templates.py  add_adapter.py  entity_scanner.py  export_config.py  main.py  rename.py  scaffold.py  updater.py
cli/tests/: e2e_manual.sh  test_e2e_scaffold.py
docs/: auth.md  caching.md  decisions.md  http-conventions.md  idempotency.md  multitenant.md
domain/models/: __init__.py  entity.py  ingredient.py  item.py
domain/ports/: __init__.py  ingredient_repository.py  item_repository.py  logger.py  repository.py
domain/services/: __init__.py  base_service.py  ingredient_service.py
infrastructure/: api.py  config.py  container.py  mcp.py
kcrud/: __init__.py
kcrud/adapters/input/: dependencies.py
kcrud/adapters/input/fastapi/: dependencies.py
kcrud/adapters/input/fastmcp/: dependencies.py
kcrud/adapters/output/: console_logger.py  duckdb_repository.py  in_memory_repository.py  mongodb_config.py  mongodb_repository.py
kcrud/adapters/output/console/: logger.py
kcrud/adapters/output/duckdb/: repository.py
kcrud/adapters/output/memory/: repository.py
kcrud/adapters/output/mongodb/: config.py  context.py  repository.py
kcrud/application/services/: __init__.py  base_service.py
kcrud/application/use_cases/: __init__.py  create.py  delete.py  duplicate.py  find_all.py  purge.py  read.py  update.py
kcrud/docs/: architecture.md
kcrud/domain/models/: entity.py
kcrud/domain/ports/: repository.py
kcrud/domain/services/: base_service.py
kcrud/infrastructure/: config.py
tests/units/: conftest.py  test_init.py
tests/units/adapters/: test_context.py
tests/units/adapters/input/: test_base_schema.py  test_dependencies.py
tests/units/adapters/input/probes/: test_metrics.py  test_server.py
tests/units/adapters/output/: test_secret_adapters.py
tests/units/adapters/output/memory/: test_repository.py
tests/units/application/services/: test_base_service.py
tests/units/application/use_cases/: test_create.py  test_delete.py  test_duplicate.py  test_find_all.py  test_purge.py  test_read.py  test_update.py
tests/units/domain/models/: test_entity.py
tests/units/domain/ports/: test_logger.py
tests/units/infrastructure/: test_adapter_registry.py  test_config.py  test_lm.py  test_repository_factory.py  test_secret_factory.py
