[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arclith"
version = "0.1.0"
description = "Hexagonal architecture framework — domain, use cases, repositories, adapters"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
authors = [
    { name = "Killian KOPP", email = "killiankopp@gmail.com" }
]
keywords = ["hexagonal-architecture", "async", "framework", "domain", "repository", "clean-architecture", "ddd"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "pydantic==2.12.5",
    "pyyaml==6.0.3",
    "uuid6==2025.0.1",
    "loguru==0.7.3",
]

[project.urls]
Homepage = "https://github.com/karned-rekipe/arclith"
Repository = "https://github.com/karned-rekipe/arclith"

[project.optional-dependencies]
mongodb = ["motor==3.7.1"]
duckdb  = ["duckdb==1.5.0", "pytz>=2024.1"]
fastapi = ["fastapi==0.135.1", "uvicorn==0.41.0"]
mcp     = ["fastmcp==3.1.0"]
all     = ["motor==3.7.1", "duckdb==1.5.0", "pytz>=2024.1", "fastapi==0.135.1", "uvicorn==0.41.0", "fastmcp==3.1.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["arclith"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

