[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arclith"
version = "0.7.0"
description = "Hexagonal architecture framework — domain, use cases, repositories, adapters"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
authors = [
    { name = "Killian KOPP", email = "killiankopp@gmail.com" }
]
keywords = ["hexagonal-architecture", "async", "framework", "domain", "repository", "clean-architecture", "ddd"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "pydantic==2.12.5",
    "pyyaml==6.0.3",
    "uuid6==2025.0.1",
    "loguru==0.7.3",
    "fastapi>=0.135.1",
    "fastmcp>=3.1.0",
]

[project.urls]
Homepage = "https://github.com/karned-rekipe/arclith"
Repository = "https://github.com/karned-rekipe/arclith"

[project.optional-dependencies]
mongodb = ["motor==3.7.1"]
duckdb  = ["duckdb==1.5.0", "pytz==2024.1"]
fastapi = ["fastapi==0.135.1", "uvicorn==0.41.0"]
mcp     = ["fastmcp==3.1.0"]
vault   = ["hvac==2.3.0"]
cache   = ["redis>=5.0.0"]
auth    = ["PyJWT[cryptography]>=2.8.0", "httpx>=0.27.0"]
all     = ["motor==3.7.1", "duckdb==1.5.0", "pytz==2024.1", "fastapi==0.135.1", "uvicorn==0.41.0", "fastmcp==3.1.0", "hvac==2.3.0", "redis>=5.0.0", "PyJWT[cryptography]>=2.8.0", "httpx>=0.27.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["arclith"]
branch = true
omit = [
    # Adapters requiring real external services (MongoDB, DuckDB)
    "arclith/adapters/output/mongodb/*",
    "arclith/adapters/output/duckdb/*",
    # Bootstrap — wired via integration tests, not unit tests
    "arclith/arclith.py",
    "**/__init__.py",
    # Auth pipeline — unit tests pending (SK-AUTH-01)
    "arclith/adapters/input/auth_pipeline.py",
    "arclith/adapters/input/fastapi/auth.py",
    "arclith/adapters/input/fastmcp/auth.py",
    "arclith/adapters/input/fastmcp/dependencies.py",
    # Requires Keycloak JWKS endpoint (integration test)
    "arclith/adapters/input/jwt/*",
    "arclith/adapters/input/license/*",
    # Requires Redis (integration test)
    "arclith/adapters/output/redis/*",
    # Requires Vault (integration test)
    "arclith/adapters/output/vault/*",
    # Memory cache — tested implicitly through auth pipeline
    "arclith/adapters/output/memory/cache_adapter.py",
    # Abstract ports (ABCs — no implementation to test)
    "arclith/domain/ports/cache.py",
    "arclith/domain/ports/license_validator.py",
    "arclith/domain/ports/tenant_resolver.py",
]

[tool.coverage.report]
fail_under = 90

[tool.mypy]
explicit_package_bases = true
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["arclith"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov==7.0.0",
    "ruff==0.15.6",
    "mypy==1.19.1",
    "types-PyYAML==6.0.12.20250516",
    "bandit[toml]==1.9.4",
    "radon==6.0.1",
]
